@@ -141,7 +141,10 @@ switch (fn = FunctionStringToCode(name))
        HandleFunctionExec(args,value,true);
        break;
    case fn_returnszero:
-       HandleReturnsZero(args,value);
+       HandleReturnsZero(args,value,false);
+       break;
+   case fn_returnszeroshell:
+       HandleReturnsZero(args,value,true);
        break;
    case fn_iprange:
        HandleIPRange(args,value);
@@ -555,7 +558,7 @@ if (*argv[0] == '/')
 
 /*********************************************************************/
 
-void HandleReturnsZero(char *args,char *value)
+void HandleReturnsZero(char *args,char *value,int useshell)
 
 { char command[CF_BUFSIZE];
   char argv[CF_MAXFARGS][CF_EXPANDSIZE];
@@ -573,7 +576,7 @@ if (*argv[0] == '/')
    {
    strncpy(command,argv[0],CF_BUFSIZE);
    
-   if (ShellCommandReturnsZero(command))
+   if (ShellCommandReturnsZero(command,useshell))
       {
       strcpy(value,CF_ANYCLASS);
       return;
