@@ -112,7 +112,7 @@ void GetRandom (char* args,char *value);
 void HandleFunctionExec (char* args,char *value,int useshell);
 void HandleStatInfo (enum builtin fn,char* args,char *value);
 void HandleCompareStat (enum builtin fn,char* args,char *value);
-void HandleReturnsZero (char* args,char *value);
+void HandleReturnsZero (char* args,char *value,int useshell);
 void HandleIPRange (char* args,char *value);
 void HandleHostRange (char* args,char *value);
 void HandleIsDefined (char* args,char *value);
@@ -728,7 +728,7 @@ void SetDomainName (char *sp);
 void GetInterfaceInfo (void);
 void GetV6InterfaceInfo (void);
 void DebugBinOut (char *string, int len);
-int ShellCommandReturnsZero (char *comm);
+int ShellCommandReturnsZero (char *comm, int useshell);
 void SetClassesOnScript (char *comm, char *classes, char *elseclasses, int useshell);
 void IDClasses (void);
 void AddListSeparator(char *s);
