@@ -5,6 +5,10 @@
 	Cfenvd code rationalization and channge in database format.
 	THe first time cfenvd runs, it will convert the database into the new format,
 	be aware that this could take some time as it is disk intensive.
+
+	Matt Shibla (ARM) ReturnsZeroShell function added.
+
+
 2.1.20
 	ipv6 structure compilation error for Tru64
 
